GUI-4402 Minor overflow issue in schedule panel

--- a/assets/stylesheets/less/partials/basic.less
+++ b/assets/stylesheets/less/partials/basic.less
@@ -3047,7 +3047,7 @@ body.tooltipOff {
 #ui-datepicker-div.schedulerDatePicker {
     .size(@width: 208px);
     background-color: @color-background-topForm;
-    box-shadow: 0px 1px 1px 2px rgba(0,0,0,.1);
+    box-shadow: 0px 0px 1px 1px rgba(0,0,0,.1);
 
     .ui-datepicker-header {
         .size(@height: 30px);
