--- a/assets/stylesheets/less/partials/scheduler.less
+++ b/assets/stylesheets/less/partials/scheduler.less
@@ -296,6 +296,7 @@
         .midContentForm {
             .flex(0 0 295px);
             background-color: @color-background-topForm;
+            overflow: visible;
 
             &.new {
                 .content .nameSection {
